# OS-Agent

./: .gitignore  README.md  rust-toolchain.toml
.github/workflows/: doc-and-test.yml
agent_proto/: Cargo.toml
agent_proto/src/: lib.rs
docs/: QUICKSTART.md  SUBMISSION.md  impl-report-tool-call.md  perf-report.md  pitch.md  run-log.md
docs/adr/: ADR-001-baseline-choice.md  ADR-002-protocol-format.md  ADR-003-context-area-layout.md
docs/design/: 00-overview.md  01-protocol.md  02-syscall-spec.md
os/: Cargo.toml
os/src/: config.rs  main.rs
os/src/agent/: blocking.rs  context_area.rs  context_path.rs  error.rs  event_bus.rs  file_attr.rs  mod.rs  pcb_ext.rs  protocol.rs
os/src/agent/tool/: handlers.rs  mod.rs  registry.rs
os/src/mm/: frame_allocator.rs  heap_allocator.rs  memory_set.rs
os/src/syscall/: agent.rs  mod.rs
os/src/task/: context.rs  manager.rs  mod.rs  task.rs
os/src/trap/: mod.rs
user/: Cargo.toml
user/src/: lib.rs  syscall.rs
